--- a/Cloud-idea.css
+++ b/Cloud-idea.css
@@ -27,8 +27,7 @@
     background-color: #E0E1DD;
     padding: 20px 10px 20px 10px;
     border:3px solid #0094ff;
-    overflow:auto;
-    clear:both;
+    overflow:auto;  
     border-radius: 10px;
 }
 #form div {
@@ -40,6 +39,12 @@
 }
 #header {
     border-bottom: 5px solid #0094ff;
+}
+
+#lähetä {
+    background-color: #ff6a00;
+    border-radius: 5px;
+    border:none;
 }
 
 
@@ -57,8 +62,12 @@ main{
 }
 section {
     display: table-row;
-    color: #CED4DA;
 }
+
+section p {
+        color: #CED4DA;
+    }
+
 p {
     margin: 10px 0px 10px 0px;
     line-height: 1.5em;
@@ -67,4 +76,6 @@ footer {
     text-align: center;
     color: #CED4DA;
 }
+
+
 
