--- a/Cloud-idea.css
+++ b/Cloud-idea.css
@@ -190,37 +190,71 @@ p {
 }
 
 @media (max-width: 1023px) {
- #container {
-     width: 80%;
- }
+    #container {
+        width: 80%;
+    }
 
-#eka, #toka {
-    width: 100%;
-    clear:both;
-    float:left;
+    #eka, #toka {
+        width: 100%;
+        clear: both;
+        float: left;
+    }
+
+        #eka .pointit li {
+            width: 80%;
+            margin: 20px auto 30px;
+            background-color: #E0E1DD;
+            border-radius: 7px;
+            padding: 5px;
+        }
+
+        #eka .pointit img {
+            margin: 10px 0 0 0;
+        }
+
+    #testimonials img {
+        display: block;
+        margin: 20px auto 20px auto;
+        float: none;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+}
+@media (max-width: 799px){
+
+    #eka, #toka{
+        width: 100%;
+        clear: both;
+    }
+
+    #form {
+        clear:both;
+        padding: 20px 30px 30px 30px;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.3em;
+    }
+    h4 {
+        font-size: 1.1em;
+       }
+    }
 }
 
-#eka .pointit li{
-    width: 80%;
-    margin: 20px auto 30px;
-    background-color:#E0E1DD; 
-    border-radius:7px;
-    padding: 5px;
-}
+@media (max-width: 479px) {
+    h1 {
+        font-size:1.5em;
+    }
 
-#eka .pointit img {
-    margin: 10px 0 0 0;
-}
-
-#testimonials img{
-    display: block;
-    margin: 20px auto 20px auto;
-    float: none;
-}
-
-h1 {
-    font-size: 2em;
-
+    h2 {
+        font-size: 1.1em;
+    }
 }
 
 
